--- a/events.html
+++ b/events.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 28 2024 05:07:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Oct 28 2024 05:32:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6711ec52a79dfc8ba75964ab" data-wf-site="6711ce94f82a306bec364adb" lang="en-HK">
 <head>
   <meta charset="utf-8">
@@ -244,7 +244,10 @@ font-size: inherit;
                 </div>
               </div>
               <div class="margin-bottom margin-xsmall">
-                <div class="text-size-small">© 2022 Vision and Mission Consultancy</div>
+                <div class="hide w-embed w-script">
+                  <script>document.querySelector('#year').innerText = new Date().getFullYear();</script>
+                </div>
+                <div class="text-size-small">© <span id="year">2024</span> Vision and Mission Consultancy</div>
               </div>
               <a href="https://www.websiteking.hk" target="_blank" class="footer3_right w-inline-block">
                 <div class="text-size-small">Web design and development by </div><img src="images/crown_1f451_1crown_1f451.png" loading="lazy" width="20" alt="">
